Start adding results section

--- a/main.bib
+++ b/main.bib
@@ -7,6 +7,30 @@
 
 
 
+@article{arc,
+abstract = {The affordable, robust, compact (ARC) reactor is the product of a conceptual design study aimed at reducing the size, cost, and complexity of a combined fusion nuclear science facility (FNSF) and demonstration fusion Pilot power plant. ARC is a ∼200-250 MWe tokamak reactor with a major radius of 3.3 m, a minor radius of 1.1 m, and an on-axis magnetic field of 9.2 T. ARC has rare earth barium copper oxide (REBCO) superconducting toroidal field coils, which have joints to enable disassembly. This allows the vacuum vessel to be replaced quickly, mitigating first wall survivability concerns, and permits a single device to test many vacuum vessel designs and divertor materials. The design point has a plasma fusion gain of Q{\textless}inf{\textgreater}p{\textless}/inf{\textgreater} ≈ 13.6, yet is fully non-inductive, with a modest bootstrap fraction of only ∼63{\%}. Thus ARC offers a high power gain with relatively large external control of the current profile. This highly attractive combination is enabled by the ∼23 T peak field on coil achievable with newly available REBCO superconductor technology. External current drive is provided by two innovative inboard RF launchers using 25 MW of lower hybrid and 13.6 MW of ion cyclotron fast wave power. The resulting efficient current drive provides a robust, steady state core plasma far from disruptive limits. ARC uses an all-liquid blanket, consisting of low pressure, slowly flowing fluorine lithium beryllium (FLiBe) molten salt. The liquid blanket is low-risk technology and provides effective neutron moderation and shielding, excellent heat removal, and a tritium breeding ratio ≥ 1.1. The large temperature range over which FLiBe is liquid permits an output blanket temperature of 900 K, single phase fluid cooling, and a high efficiency helium Brayton cycle, which allows for net electricity generation when operating ARC as a Pilot power plant.},
+archivePrefix = {arXiv},
+arxivId = {1409.3540},
+author = {Sorbom, B. N. and Ball, J. and Palmer, T. R. and Mangiarotti, F. J. and Sierchio, J. M. and Bonoli, P. and Kasten, C. and Sutherland, D. A. and Barnard, H. S. and Haakonsen, C. B. and Goh, J. and Sung, C. and Whyte, D. G.},
+doi = {10.1016/j.fusengdes.2015.07.008},
+eprint = {1409.3540},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Sorbom et al. - 2015 - ARC A compact, high-field, fusion nuclear science facility and demonstration power plant with demountable magnets.pdf:pdf},
+isbn = {9781479982646},
+issn = {09203796},
+journal = {Fusion Engineering and Design},
+keywords = {Compact pilot reactor,Fusion nuclear science facility,High magnetic field,High-field launch,Liquid immersion blanket,Superconducting joints,Tokamak},
+mendeley-groups = {Confinement,codes},
+month = {nov},
+pages = {378--405},
+publisher = {North-Holland},
+title = {{ARC: A compact, high-field, fusion nuclear science facility and demonstration power plant with demountable magnets}},
+url = {https://www.sciencedirect.com/science/article/pii/S0920379615302337},
+volume = {100},
+year = {2015}
+}
+
+
+
 @techreport{doe87,
 author = {DOE},
 file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/of Budget - Unknown - FY 1987 Congressional Budget Request Vol 3.pdf:pdf},
